Refactor demo structure and update package names; enhance logging and add database dependencies